--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "project-3",
-  "description": "WDI25 Project 3",
+  "description": "groupmove",
   "main": "server.js",
   "authors": [
     "alexpchin <alex@alexchin.co.uk>"
