--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,6 @@
   ],
   "dependencies": {
     "angular": "^1.6.3",
-    "angular-ui-router": "^0.4.2",
     "angular-resource": "^1.6.3",
     "satellizer": "^0.15.5",
     "angular-bootstrap": "^2.5.0",
@@ -24,7 +23,8 @@
     "angular-animate": "^1.6.3",
     "angular-messages": "^1.6.3",
     "ngmap": "^1.18.4",
-    "angular-chart.js": "^1.1.1"
+    "angular-chart.js": "^1.1.1",
+    "angular-ui-router": "^1.0.4"
   },
   "resolutions": {
     "angular": "^1.6.3"
